final commit before submission 5

--- a/Project_2/app/templates/master.html
+++ b/Project_2/app/templates/master.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Disasters</title>
-
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>‌
+    <!-- <style>
+        /* my style */
+        hr.rounded {
+          border-top: 8px solid #bbb;
+          border-radius: 5px;
+        }
+    </style> -->
 </head>
 
 <body>
@@ -52,7 +59,9 @@
     </div>
 </div>
 
+
 <div class="container">
+    <hr class="rounded">
     {% block content %}
         <div class="page-header">
             <h1 class="text-center">Overview of Training Dataset</h1>
@@ -62,6 +71,7 @@
     {% for id in ids %}
         <div id="{{id}}"></div>
     {% endfor %}
+
 </div>
 
 <script type="text/javascript">
